hosts/nandstorm/k8s/apps/dojo/overlays/prod/pod-spec.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dojo
spec:
  template:
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: dojo-prod-data-zfs
      containers:
      - name: dojo
        imagePullPolicy: Always
      volumes:
      - name: google-backup
        secret:
          secretName: dojo-backup-google
          optional: false
      - name: backup-status
        secret:
          secretName: dojo-backup-status
          optional: false
