hosts/nandstorm/k8s/apps/dojo/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dojo
  namespace: dojo-prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
  - hosts:
    - dojo.thejeffer.net
    secretName: dojo-prod-tls
  rules:
  - host: dojo.thejeffer.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dojo
            port:
              number: 80
